--- a/.azure/pipelines/ci.yml
+++ b/.azure/pipelines/ci.yml
@@ -196,7 +196,6 @@ stages:
       # Build the arm64 shared framework
       - script: ./eng/build.cmd
                 -ci
-                -noBuildRepoTasks
                 -arch arm64
                 -sign
                 -pack
@@ -235,7 +234,7 @@ stages:
                 $(WindowsSignLogArgs)
         displayName: Code sign packages
 
-      # Windows installers bundle x86/x64/arm64 assets
+      # Windows installers bundle both x86 and x64 assets
       - script: ./eng/build.cmd
                 -ci
                 -noBuildRepoTasks
@@ -247,6 +246,23 @@ stages:
                 $(_InternalRuntimeDownloadArgs)
                 $(WindowsInstallersLogArgs)
         displayName: Build Installers
+
+      # Windows installers bundle for arm64
+      - script: ./eng/build.cmd
+                -ci
+                -noBuildRepoTasks
+                -arch arm64
+                -sign
+                -buildInstallers
+                -noBuildNative
+                /p:DotNetSignType=$(_SignType)
+                /p:AssetManifestFileName=aspnetcore-win.xml
+                $(_BuildArgs)
+                $(_PublishArgs)
+                /p:PublishInstallerBaseVersion=true
+                $(_InternalRuntimeDownloadArgs)
+                $(WindowsArm64InstallersLogArgs)
+        displayName: Build ARM64 Installers
 
       # A few files must also go to the VS package feed.
       - ${{ if and(ne(variables['System.TeamProject'], 'public'), notin(variables['Build.Reason'], 'PullRequest'), ne(variables.PostBuildSign, 'true')) }}:
