--- a/.azure/pipelines/ci.yml
+++ b/.azure/pipelines/ci.yml
@@ -209,30 +209,18 @@ stages:
                 $(WindowsArm64LogArgs)
         displayName: Build ARM64
 
-      # Windows installers bundle x86/x64/arm64 assets
-      - script: ./eng/build.cmd
-                -ci
-                -noBuildRepoTasks
-                -buildInstallers
-                -noBuildNative
-                /p:DotNetSignType=$(_SignType)
-                $(_BuildArgs)
-                $(_InternalRuntimeDownloadArgs)
-                $(WindowsInstallersLogArgs)
-        displayName: Build Installers
-
       # Submit a manual build (in public or internal project) to validate changes to site extensions.
-      - script: .\src\SiteExtensions\build.cmd
-                -ci
-                -noBuildRepoTasks
-                -pack
-                -sign
-                -noBuildDeps
-                -noBuildNative
-                $(_BuildArgs)
-                $(_InternalRuntimeDownloadArgs)
-        displayName: Build SiteExtension
-
+      - ${{ if ne(variables['Build.Reason'], 'PullRequest') }}:
+        - script: .\src\SiteExtensions\build.cmd
+                  -ci
+                  -noBuildRepoTasks
+                  -pack
+                  -noBuildDeps
+                  -noBuildNative
+                  $(_BuildArgs)
+                  $(_InternalRuntimeDownloadArgs)
+          displayName: Build SiteExtension
+          
       # This runs code-signing on all packages, zips, and jar files as defined in build/CodeSign.targets. If
       # https://github.com/dotnet/arcade/issues/1957 is resolved, consider running code-signing inline with the other
       # previous steps. Sign check is disabled because it is run in a separate step below, after installers are built.
@@ -247,6 +235,19 @@ stages:
                 $(WindowsSignLogArgs)
         displayName: Code sign packages
 
+      # Windows installers bundle x86/x64/arm64 assets
+      - script: ./eng/build.cmd
+                -ci
+                -noBuildRepoTasks
+                -sign
+                -buildInstallers
+                -noBuildNative
+                /p:DotNetSignType=$(_SignType)
+                $(_BuildArgs)
+                $(_InternalRuntimeDownloadArgs)
+                $(WindowsInstallersLogArgs)
+        displayName: Build Installers
+        
       # A few files must also go to the VS package feed.
       - ${{ if and(ne(variables['System.TeamProject'], 'public'), notin(variables['Build.Reason'], 'PullRequest'), ne(variables.PostBuildSign, 'true')) }}:
         - task: NuGetCommand@2
@@ -269,7 +270,7 @@ stages:
       - name: Windows_ANCM
         path: artifacts/bin/ANCMv2
       - name: Windows_ANCMIISExpress
-        path: artifacts/bin/AncmIISExpress
+        path: artifacts/bin/AncmIISExpressV2
 
   # Build Windows ARM
   - template: jobs/default-build.yml
