[release/6.0] Build .rpm packages for linux arm64 (#40504)
* [release/6.0] Build .rpm packages for linux arm64

* Update Build.props

* Update Directory.Build.props

* Update Directory.Build.targets

* Update Rpm.Runtime.rpmproj

* Update Rpm.TargetingPack.rpmproj

* Avoid duplicate targeting-pack RPM Build
- if an RPM containing platform-neutral executables is platform-neutral, this should be enough

* !fixup! Change Linux ARM64 job, not ARM one

* Correct RPM arch name, include in targeting pack

* Revert "Avoid duplicate targeting-pack RPM Build"

This reverts commit 7bebff5b0f77e69b49fd04fd5ffd52f4bcf72241

* Rename x64 RPM to "x64"

Co-authored-by: Doug Bunting <6431421+dougbu@users.noreply.github.com>

--- a/.azure/pipelines/ci.yml
+++ b/.azure/pipelines/ci.yml
@@ -407,7 +407,6 @@ stages:
             --no-build-nodejs
             --no-build-java
             -p:OnlyPackPlatformSpecificPackages=true
-            -p:AssetManifestFileName=aspnetcore-Linux_x64.xml
             $(_BuildArgs)
             $(_InternalRuntimeDownloadArgs)
         displayName: Run build.sh
@@ -496,17 +495,26 @@ stages:
       jobName: Linux_arm64_build
       jobDisplayName: "Build: Linux ARM64"
       agentOs: Linux
-      buildArgs:
-        --arch arm64
-        --all
-        --pack
-        --no-build-nodejs
-        --no-build-java
-        -p:OnlyPackPlatformSpecificPackages=true
-        -p:AssetManifestFileName=aspnetcore-Linux_arm64.xml
-        $(_BuildArgs)
-        $(_PublishArgs)
-        $(_InternalRuntimeDownloadArgs)
+      steps:
+      - script: ./eng/build.sh
+            --ci
+            --arch arm64
+            --pack
+            --all
+            --no-build-nodejs
+            --no-build-java
+            -p:OnlyPackPlatformSpecificPackages=true
+            $(_BuildArgs)
+            $(_InternalRuntimeDownloadArgs)
+        displayName: Run build.sh
+      - script: git clean -xfd src/**/obj/;
+          ./dockerbuild.sh rhel --ci --nobl --arch arm64 --build-installers --no-build-deps --no-build-nodejs
+          -p:OnlyPackPlatformSpecificPackages=true -p:BuildRuntimeArchive=false -p:LinuxInstallerType=rpm
+          -p:AssetManifestFileName=aspnetcore-Linux_arm64.xml
+          $(_BuildArgs)
+          $(_PublishArgs)
+          $(_InternalRuntimeDownloadArgs)
+        displayName: Build RPM installers
       installNodeJs: false
       installJdk: false
       artifacts:
