Add the PublishArgs back

--- a/.azure/pipelines/ci.yml
+++ b/.azure/pipelines/ci.yml
@@ -244,6 +244,7 @@ stages:
                 -noBuildNative
                 /p:DotNetSignType=$(_SignType)
                 $(_BuildArgs)
+                $(_PublishArgs)
                 $(_InternalRuntimeDownloadArgs)
                 $(WindowsInstallersLogArgs)
         displayName: Build Installers
