Publish version files again

--- a/.azure/pipelines/ci.yml
+++ b/.azure/pipelines/ci.yml
@@ -246,6 +246,7 @@ stages:
                 $(_BuildArgs)
                 $(_PublishArgs)
                 $(_InternalRuntimeDownloadArgs)
+                /p:PublishInstallerBaseVersion=true
                 $(WindowsInstallersLogArgs)
         displayName: Build Installers
 
