Make installers consistently use arm64

--- a/src/Installers/Windows/AspNetCoreModule-Setup/Directory.Build.props
+++ b/src/Installers/Windows/AspNetCoreModule-Setup/Directory.Build.props
@@ -76,14 +76,14 @@
       <Private>True</Private>
       <DoNotHarvest>True</DoNotHarvest>
       <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
-      <SetPlatform>Platform=ARM64</SetPlatform>
+      <SetPlatform>Platform=arm64</SetPlatform>
     </ProjectReference>
     <ProjectReference Include="$(_ServerIISBasePath)AspNetCoreModuleV2\OutOfProcessRequestHandler\OutOfProcessRequestHandler.vcxproj">
       <Name>AspNetCoreV2HandlerARM64</Name>
       <Private>True</Private>
       <DoNotHarvest>True</DoNotHarvest>
       <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
-      <SetPlatform>Platform=ARM64</SetPlatform>
+      <SetPlatform>Platform=arm64</SetPlatform>
     </ProjectReference>
   </ItemGroup>
 
