Disable SBOMs for linux musl for now

--- a/.azure/pipelines/ci.yml
+++ b/.azure/pipelines/ci.yml
@@ -515,6 +515,7 @@ stages:
       installNodeJs: false
       disableComponentGovernance: true
       skipComponentGovernanceDetection: true
+      enableSbom: false
       artifacts:
       - name: Linux_musl_x64_Logs
         path: artifacts/log/
