--- a/.azure/pipelines/jobs/default-build.yml
+++ b/.azure/pipelines/jobs/default-build.yml
@@ -69,6 +69,7 @@ parameters:
   timeoutInMinutes: 180
   testRunTitle: $(AgentOsName)-$(BuildConfiguration)
   useHostedUbuntu: true
+  enableSbom: true
 
   # We need longer than the default amount of 5 minutes to upload our logs/artifacts. (We currently take around 5 mins in the best case).
   # This makes sure we have time to upload everything in the case of a build timeout - really important for investigating a build
@@ -98,6 +99,7 @@ jobs:
     mergeTestResults: true
     testRunTitle: ${{ parameters.testRunTitle }}
     enableTelemetry: true
+    enableSbom: ${{ parameters.enableSbom }}
     helixRepo: dotnet/aspnetcore
     helixType: build.product/
     workspace:
