--- a/.azure/pipelines/ci.yml
+++ b/.azure/pipelines/ci.yml
@@ -290,6 +290,13 @@ stages:
         $(_InternalRuntimeDownloadArgs)
       ${{ if and(ne(variables['System.TeamProject'], 'public'), or(eq(parameters.testSourceIndexing, 'true'), eq(variables['Build.SourceBranch'], 'refs/heads/main'))) }}:
         afterBuild:
+        - task: UseDotNet@2
+          displayName: Use .NET Core sdk 3.1
+          inputs:
+            packageType: sdk
+            version: 3.1.x
+            installationPath: $(Build.SourcesDirectory)/dotnet
+            workingDirectory: $(Build.SourcesDirectory)
         - powershell: . $(Build.SourcesDirectory)/activate.ps1;
             dotnet tool install BinLogToSln
             --version $(SourceIndexPackageVersion)
