!fixup! Try doing native build w/o rich nav
nit: put `-no`s together

--- a/.azure/pipelines/richnav.yml
+++ b/.azure/pipelines/richnav.yml
@@ -33,7 +33,15 @@ stages:
       - script: ./eng/build.cmd
                 -ci
                 -arch x64
+                -buildNative
+                $(_BuildArgs)
+        displayName: Build x64 native assets
+      - script: ./eng/build.cmd
+                -ci
+                -arch x64
                 -all
+                -noBuildNative
+                -noBuildRepoTasks
                 /p:EnableRichCodeNavigation=true
                 $(_BuildArgs)
         displayName: Build x64
@@ -42,11 +50,11 @@ stages:
       # This is going to actually build x86 native assets.
       - script: ./eng/build.cmd
                 -ci
-                -noBuildRepoTasks
                 -arch x86
                 -all
                 -noBuildJava
                 -noBuildNative
+                -noBuildRepoTasks
                 /p:EnableRichCodeNavigation=true
                 /p:OnlyPackPlatformSpecificPackages=true
                 $(_BuildArgs)
@@ -56,10 +64,10 @@ stages:
       # Build the arm64 shared framework
       - script: ./eng/build.cmd
                 -ci
-                -noBuildRepoTasks
                 -arch arm64
                 -noBuildJava
                 -noBuildNative
+                -noBuildRepoTasks
                 /p:EnableRichCodeNavigation=true
                 /p:OnlyPackPlatformSpecificPackages=true
                 $(_BuildArgs)
@@ -69,9 +77,10 @@ stages:
       # Windows installers bundle x86/x64/arm64 assets
       - script: ./eng/build.cmd
                 -ci
-                -noBuildRepoTasks
                 -buildInstallers
+                -noBuildJava
                 -noBuildNative
+                -noBuildRepoTasks
                 /p:EnableRichCodeNavigation=true
                 $(_BuildArgs)
                 $(WindowsNonX64LogArgs)
