--- a/.azure/pipelines/ci.yml
+++ b/.azure/pipelines/ci.yml
@@ -282,7 +282,13 @@ stages:
         includeForks: true
       - name: Windows_Packages
         path: artifacts/packages/
-
+      - name: Windows_HostingBundle
+        path: artifacts/bin/WindowsHostingBundle
+      - name: Windows_ANCM_Msi
+        path: artifacts/bin/ANCMv2
+      - name: Windows_ANCMIISExpress_Msi
+        path: artifacts/bin/AncmIISExpressV2
+        
   # Build Windows ARM
   - template: jobs/default-build.yml
     parameters:
