--- a/.azure/pipelines/ci.yml
+++ b/.azure/pipelines/ci.yml
@@ -744,3 +744,6 @@ jobs:
           artifactName: artifacts-Publish
           artifactType: Container
           parallel: true
+    - ${{ if and(notin(variables['Build.Reason'], 'PullRequest'), ne(parameters.disableComponentGovernance, 'true')) }}:
+        - task: ComponentGovernanceComponentDetection@0
+          continueOnError: true
