Add Microsoft.AspNetCore.OpenApi package
Fix up schema type generation

Post review polish

Add new package to templates

Split out SchemaGenerator

Clean up usings

--- a/eng/Dependencies.props
+++ b/eng/Dependencies.props
@@ -62,6 +62,7 @@ and are generated based on the last package release.
     <LatestPackageReference Include="Microsoft.Win32.Registry" />
     <LatestPackageReference Include="Microsoft.CodeAnalysis.CSharp.Analyzer.Testing.XUnit" />
     <LatestPackageReference Include="Microsoft.CodeAnalysis.CSharp.CodeFix.Testing.XUnit" />
+    <LatestPackageReference Include="Microsoft.OpenApi" />
     <LatestPackageReference Include="System.Buffers" />
     <LatestPackageReference Include="System.CodeDom" />
     <LatestPackageReference Include="System.CommandLine.Experimental" />
