Add Microsoft.AspNetCore.OpenApi package

--- a/eng/TrimmableProjects.props
+++ b/eng/TrimmableProjects.props
@@ -18,6 +18,7 @@
     <TrimmableProject Include="Microsoft.AspNetCore.Http.Features" />
     <TrimmableProject Include="Microsoft.AspNetCore.Http" />
     <TrimmableProject Include="Microsoft.AspNetCore.Metadata" />
+    <TrimmableProject Include="Microsoft.AspNetCore.OpenApi" />
     <TrimmableProject Include="Microsoft.AspNetCore.Routing.Abstractions" />
     <TrimmableProject Include="Microsoft.AspNetCore.WebUtilities" />
     <TrimmableProject Include="Microsoft.AspNetCore.Connections.Abstractions" />
