--- a/.azure/pipelines/ci.yml
+++ b/.azure/pipelines/ci.yml
@@ -174,6 +174,9 @@ jobs:
           artifactName: artifacts-dependencies-props
           artifactType: Container
           parallel: true
+    - ${{ if notin(variables['Build.Reason'], 'PullRequest') }}:
+        - task: ComponentGovernanceComponentDetection@0
+          continueOnError: true
 
   - job: MacOs_SharedFx
     displayName: Build Osx-x64 SharedFx
@@ -223,6 +226,9 @@ jobs:
           artifactName: artifacts-MacOs-SharedFx
           artifactType: Container
           parallel: true
+    - ${{ if notin(variables['Build.Reason'], 'PullRequest') }}:
+        - task: ComponentGovernanceComponentDetection@0
+          continueOnError: true
 
   - job: Linux_SharedFx
     displayName: Build Linux x64/arm SharedFx
@@ -287,6 +293,9 @@ jobs:
           artifactName: artifacts-Linux-SharedFx
           artifactType: Container
           parallel: true
+    - ${{ if notin(variables['Build.Reason'], 'PullRequest') }}:
+        - task: ComponentGovernanceComponentDetection@0
+          continueOnError: true
 
   - job: Linux_Musl_SharedFx
     displayName: Build Linux-musl-x64 SharedFx
@@ -345,6 +354,9 @@ jobs:
           artifactName: artifacts-Linux-Musl-SharedFx
           artifactType: Container
           parallel: true
+    - ${{ if notin(variables['Build.Reason'], 'PullRequest') }}:
+        - task: ComponentGovernanceComponentDetection@0
+          continueOnError: true
 
   - job: Windows_Installers
     displayName: Build Windows Installers
@@ -422,6 +434,9 @@ jobs:
           artifactName: artifacts-Windows-Installers
           artifactType: Container
           parallel: true
+    - ${{ if notin(variables['Build.Reason'], 'PullRequest') }}:
+        - task: ComponentGovernanceComponentDetection@0
+          continueOnError: true
 
   - job: Package_Archive
     displayName: Build Package Archive
@@ -479,6 +494,9 @@ jobs:
           artifactName: artifacts-Package-Archive
           artifactType: Container
           parallel: true
+    - ${{ if notin(variables['Build.Reason'], 'PullRequest') }}:
+        - task: ComponentGovernanceComponentDetection@0
+          continueOnError: true
 
   - job: SharedFX_Installers
     displayName: Build SharedFX Installers
@@ -570,6 +588,9 @@ jobs:
           artifactName: artifacts-SharedFx-Installers
           artifactType: Container
           parallel: true
+    - ${{ if notin(variables['Build.Reason'], 'PullRequest') }}:
+        - task: ComponentGovernanceComponentDetection@0
+          continueOnError: true
 
   - job: Publish
     displayName: Publish
