--- a/src/Middleware/SpaServices/src/npm/aspnet-webpack/package.json
+++ b/src/Middleware/SpaServices/src/npm/aspnet-webpack/package.json
@@ -36,6 +36,7 @@
     "webpack": "^1.13.2 || ^2.1.0-beta || ^3.0.0"
   },
   "resolutions": {
-    "glob-parent": ">=5.1.2"
+    "glob-parent": ">=5.1.2",
+    "minimist": ">=1.2.6"
   }
 }
