--- a/src/Http/Http.Results/tools/ResultsOfTGenerator/ResultsOfTGenerator.csproj
+++ b/src/Http/Http.Results/tools/ResultsOfTGenerator/ResultsOfTGenerator.csproj
@@ -4,6 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>$(DefaultNetCoreTargetFramework)</TargetFramework>
     <Nullable>enable</Nullable>
+    <AddPublicApiAnalyzers>false</AddPublicApiAnalyzers>
   </PropertyGroup>
 
 </Project>
