--- a/eng/TrimmableProjects.props
+++ b/eng/TrimmableProjects.props
@@ -8,14 +8,17 @@
 <Project>
   <ItemGroup>
     <TrimmableProject Include="Microsoft.AspNetCore.Hosting.Abstractions" />
+    <TrimmableProject Include="Microsoft.AspNetCore.Hosting" />
     <TrimmableProject Include="Microsoft.AspNetCore.Hosting.Server.Abstractions" />
     <TrimmableProject Include="Microsoft.Net.Http.Headers" />
     <TrimmableProject Include="Microsoft.AspNetCore.Http.Abstractions" />
     <TrimmableProject Include="Microsoft.AspNetCore.Http.Extensions" />
     <TrimmableProject Include="Microsoft.AspNetCore.Http.Features" />
+    <TrimmableProject Include="Microsoft.AspNetCore.Http" />
     <TrimmableProject Include="Microsoft.AspNetCore.Metadata" />
     <TrimmableProject Include="Microsoft.AspNetCore.Routing.Abstractions" />
     <TrimmableProject Include="Microsoft.AspNetCore.WebUtilities" />
+    <TrimmableProject Include="Microsoft.AspNetCore.Connections.Abstractions" />
     <TrimmableProject Include="Microsoft.AspNetCore.Authorization" />
     <TrimmableProject Include="Microsoft.AspNetCore.Components.Authorization" />
     <TrimmableProject Include="Microsoft.AspNetCore.Components" />
