--- a/eng/TrimmableProjects.props
+++ b/eng/TrimmableProjects.props
@@ -11,6 +11,7 @@
     <TrimmableProject Include="Microsoft.AspNetCore.Hosting.Server.Abstractions" />
     <TrimmableProject Include="Microsoft.Net.Http.Headers" />
     <TrimmableProject Include="Microsoft.AspNetCore.Http.Abstractions" />
+    <TrimmableProject Include="Microsoft.AspNetCore.Http.Extensions" />
     <TrimmableProject Include="Microsoft.AspNetCore.Http.Features" />
     <TrimmableProject Include="Microsoft.AspNetCore.Metadata" />
     <TrimmableProject Include="Microsoft.AspNetCore.Routing.Abstractions" />
