Annotate additional assemblies for trimming
* Connections.Abstractions
* Microsoft.AspNetCore.Http
* Microsoft.AspNetCore.Http.Routing

--- a/eng/TrimmableProjects.props
+++ b/eng/TrimmableProjects.props
@@ -19,6 +19,7 @@
     <TrimmableProject Include="Microsoft.AspNetCore.Http" />
     <TrimmableProject Include="Microsoft.AspNetCore.Metadata" />
     <TrimmableProject Include="Microsoft.AspNetCore.Routing.Abstractions" />
+    <TrimmableProject Include="Microsoft.AspNetCore.Routing" />
     <TrimmableProject Include="Microsoft.AspNetCore.WebUtilities" />
     <TrimmableProject Include="Microsoft.AspNetCore.Connections.Abstractions" />
     <TrimmableProject Include="Microsoft.AspNetCore.Server.HttpSys" />
