--- a/eng/TrimmableProjects.props
+++ b/eng/TrimmableProjects.props
@@ -3,7 +3,7 @@
 
   This file contains a complete list of projects annotated for trimming.
 
-  This file is generated using the <Trimmable> properties from each .csproj in this repository.
+  This file is generated using the <IsTrimmable> properties from each .csproj in this repository.
 -->
 <Project>
   <ItemGroup>
